# slurmpy-rust

./: Cargo.toml  test_config.toml  test_config2.toml
src/: cli.rs  config.rs  grepr_args.rs  lib.rs  main.rs  secdef_args.rs  slurm.rs  squeue_args.rs
