[package]
name = "slurmpy-rust"
version = "0.1.0"
edition = "2021"
authors = ["M S <fakeemail@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.2", features = ["derive"] }
confy = "0.5.1"
serde = { version = "1.0.190", features = ["serde_derive"] }

